# TODO_JOURNAL

./: .coverage  logging.ini  pyproject.toml  todo_gui.spec
INFO/: HELP.txt  ПЛАН.md  ТРЕБОВАНИЯ_МОИ.md  ТРЕБОВАНИЯ_ТЗ.md
src/: config.py  exceptions.py  logger.py  todo_journal.py
src/gui/: app.py  dialogs.py  main_window.py
tests/: test_config.py  test_logger.py  test_todo_journal.py
