[tool.poetry]
name = "todo-gui"
version = "0.1.0"
description = "Simple todo application with GUI(Tkinter)"
authors = ["Ducktor74"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"                    # совместимость с Python 3.8 и выше
pyyaml = "^6.0"                     # для работы с YAML-конфигами


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"                 # плагин для coverage
pylint = "^3.0"
coverage = "^7.0"                   # если нужен отдельно (pytest-cov уже включает)

[tool.poetry.scripts]
todo-gui = "src.gui.app:main"       # после установки можно запускать командой todo-gui

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
python_files = "test_*.py"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/gui/*",
    "src/gui/*",
    "*/__init__.py",
    "*/*/__init__.py"
] #не работает

[tool.coverage.report]
exclude_lines = [
    "if __name__ == '__main__':",
    "pragma: no cover"
]

